fixing spacing on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,7 @@ body{
     color: #ffffff;
     height: 70vh;
     text-align: center;
-    margin-top: 50px;
+    margin-top: 100px;
 }
 
 .appTitle{
